3.4
	+ Pass model, type and id to enabled subroutine in
	  EBox::Types::MultiStateAction to be ortoghonal to handler property
	+ Fixed JS error on showing errors in customActionClicked
	+ Fixed rethrown of exception in restartService() method
	+ Give support to custom actions without image. Those actions will
	  not appear in the legend.
	+ Added to findValueMultipleFields and findValue the nosync parameter
	+ Added support for haproxy 1.5
	+ Moved nginx to listen on localhost
	+ Integration with HA module in save changes process
	+ Added icon for new zentyal-ha module
	+ Migrate rs_verify_servers in remoteservices.conf to
	  rest_verify_servers core.conf
	+ Include basic support to free-format Template models to be
	  included in Composites
	+ Move run-pending-ops script from remoteservices to core
	+ Rename EBox::RemoteServices::RESTResult to EBox::RESTClient::Result
	+ Move EBox::RemoteServices::RESTClient to EBox::RESTClient as it
	  is used in ha and remoteservices module.
	+ Adapt init.d and upstart running checks to Ubuntu 13.10
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Adapted apache configuration to 2.4
	+ Adapted EBox::Config::Redis to the new libredis-perl API
	+ Adapted redis.conf to redis 2.6
3.3.4
	+ Fixed rethrown of exception in restartService() method
	+ Remove lock file in EBox::Util::Lock::unlock()
	+ Fixed mason component root for custom stubs
	+ Fixed regression in clone action
	+ Decode to utf8 the MySQL database results
	+ Create log database using utf8 charset
	+ Better way to set MySQL password for all the root accounts
	+ Use same JSON reply file for changeRowForm and dataInUse
	+ Fixed regression in AJAX changes with raised error when a
	  data in use exception was found
	+ Fixed css error that hide information in the logs tables
	+ Use sharedscripts in zentyal-core logrotate to avoid triggering
	  in every log file
	+ Take into account view customizer on audit logging