@@ -612,11 +612,17 @@ sub enableService
 
     $self->set_bool('_serviceModuleStatus', $status);
 
+    # FIXME: Move this to an observer pattern
     my $audit = EBox::Global->modInstance('audit');
     if (defined ($audit)) {
         my $action = $status ? 'enableService' : 'disableService';
         $audit->logAction('global', 'Module Status', $action, $self->{name});
     }
+    my $ha = $self->global()->modInstance('ha');
+    if (defined($ha)) {
+        $ha->setIfSingleInstanceModule($self->name());
+    }
+
 }
 
 # Method: defaultStatus
